[rocksandra] support cassandra partition deletion
* add a merge operator for parition meta data (currently partition
  deletion info only)
* read partition deletion in cassandra compaction filter and drop rows
  if it's partition has been deleted

--- a/java/Makefile
+++ b/java/Makefile
@@ -15,6 +15,7 @@ NATIVE_JAVA_CLASSES = \
 	org.rocksdb.ClockCache\
 	org.rocksdb.CassandraCompactionFilter\
 	org.rocksdb.CassandraValueMergeOperator\
+	org.rocksdb.CassandraPartitionMetaMergeOperator\
 	org.rocksdb.ColumnFamilyHandle\
 	org.rocksdb.ColumnFamilyOptions\
 	org.rocksdb.CompactionJobInfo\
