--- a/java/CMakeLists.txt
+++ b/java/CMakeLists.txt
@@ -48,6 +48,7 @@ set(JNI_NATIVE_SOURCES
         rocksjni/rocks_callback_object.cc
         rocksjni/cassandra_compactionfilterjni.cc
         rocksjni/cassandra_value_operator.cc
+        rocksjni/cassandra_partition_meta_datajni.cc
         rocksjni/cassandra_partition_meta_merge_operator.cc
         rocksjni/restorejni.cc
         rocksjni/rocks_callback_object.cc
@@ -110,6 +111,7 @@ set(JAVA_MAIN_CLASSES
   src/main/java/org/rocksdb/Cache.java
   src/main/java/org/rocksdb/CassandraCompactionFilter.java
   src/main/java/org/rocksdb/CassandraValueMergeOperator.java
+  src/main/java/org/rocksdb/CassandraPartitionMetaData.java
   src/main/java/org/rocksdb/CassandraPartitionMetaMergeOperator.java
   src/main/java/org/rocksdb/Checkpoint.java
   src/main/java/org/rocksdb/ChecksumType.java
@@ -400,6 +402,7 @@ if(${CMAKE_VERSION} VERSION_LESS "3.11.4" OR (${Java_VERSION_MINOR} STREQUAL "7"
           org.rocksdb.BloomFilter
           org.rocksdb.CassandraCompactionFilter
           org.rocksdb.CassandraValueMergeOperator
+          org.rocksdb.CassandraPartitionMetaData
           org.rocksdb.CassandraPartitionMetaMergeOperator
           org.rocksdb.Checkpoint
           org.rocksdb.ClockCache
