--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -13,7 +13,7 @@ foreach(ONE_BENCH_CPP ${ALL_BENCH_CPP})
 
    add_executable(${TARGET_NAME} ${ONE_BENCH_CPP})
    set_target_properties(${TARGET_NAME} PROPERTIES OUTPUT_NAME ${ONE_BENCH_EXEC}) 
-   target_link_libraries(${TARGET_NAME} 
+   target_link_libraries(${TARGET_NAME} ${ROCKSDB_LIB}
 
 # If required, you can add your project library here
 # ...
