Add makefile change

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1363,6 +1363,7 @@ set(BENCHMARK_ENABLE_EXCEPTIONS OFF CACHE BOOL "Disable benchmark exceptions" FO
 set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Don't install benchmark" FORCE)
 set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "Don't download dependencies" FORCE)
 set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "Disable Google Test in benchmark" FORCE)
-find_package(benchmark REQUIRED)
-
-add_subdirectory(${PROJECT_SOURCE_DIR}/microbench/)
+if(WITH_BENCHMARK)
+  find_package(benchmark REQUIRED)
+  add_subdirectory(${PROJECT_SOURCE_DIR}/microbench/)
+endif()
